@@ -1,8 +1,8 @@
 # Copyright (c) 1999-2001 by Red Hat, Inc. All rights reserved.
-# 
+#
 # THIS MATERIAL IS PROVIDED AS IS, WITH ABSOLUTELY NO WARRANTY EXPRESSED
 # OR IMPLIED.  ANY USE IS AT YOUR OWN RISK.
-# 
+#
 # Permission is hereby granted to use or copy this program
 # for any purpose,  provided the above notices are retained on all copies.
 # Permission to modify the code and to distribute modified code is granted,
@@ -40,7 +40,7 @@ AM_CPPFLAGS += -I$(top_builddir)/libatomic_ops/src \
 endif
 
 # Initialize variables so that we can declare files locally.
-EXTRA_DIST = 
+EXTRA_DIST =
 lib_LTLIBRARIES =
 include_HEADERS =
 pkginclude_HEADERS =
@@ -78,11 +78,11 @@ if WIN32_THREADS
 libgc_la_SOURCES += win32_threads.c
 endif
 
-if USE_INTERNAL_LIBATOMIC_OPS 	 
+if USE_INTERNAL_LIBATOMIC_OPS
 nodist_libgc_la_SOURCES = libatomic_ops/src/atomic_ops.c
-endif 	 
-  	 
-if NEED_ATOMIC_OPS_ASM 	 
+endif
+
+if NEED_ATOMIC_OPS_ASM
 nodist_libgc_la_SOURCES = libatomic_ops/src/atomic_ops_sysdeps.S
 endif
 
@@ -122,7 +122,7 @@ AM_CXXFLAGS = @GC_CFLAGS@
 AM_CFLAGS = @GC_CFLAGS@
 
 ## FIXME: relies on internal code generated by automake.
-## FIXME: ./configure --enable-dependency-tracking should be used 
+## FIXME: ./configure --enable-dependency-tracking should be used
 #all_objs = @addobjs@ $(libgc_la_OBJECTS)
 #$(all_objs) : include/private/gcconfig.h include/private/gc_priv.h \
 #include/private/gc_hdrs.h include/gc.h include/gc_gcj.h \
@@ -177,9 +177,9 @@ EXTRA_DIST += BCC_MAKEFILE NT_MAKEFILE \
 
 # files used by makefiles other than Makefile.am
 #
-EXTRA_DIST += extra/add_gc_prefix.c extra/gcname.c extra/if_mach.c \
-    extra/if_not_there.c hpux_test_and_clear.s gc.mak extra/MacOS.c \
-    MacProjects.sit.hqx mach_dep.c extra/setjmp_t.c \
+EXTRA_DIST += extra/add_gc_prefix.c extra/gc.c extra/gcname.c \
+    extra/if_mach.c extra/if_not_there.c hpux_test_and_clear.s gc.mak \
+    extra/MacOS.c MacProjects.sit.hqx mach_dep.c extra/setjmp_t.c \
     extra/threadlibs.c extra/AmigaOS.c \
     Mac_files/datastart.c Mac_files/dataend.c \
     Mac_files/MacOS_config.h Mac_files/MacOS_Test_config.h \
@@ -194,7 +194,7 @@ EXTRA_DIST += libatomic_ops
 CONFIG_STATUS_DEPENDENCIES = $(srcdir)/configure.host
 
 #
-# :GOTCHA: GNU make rule for making .s out of .S is flawed, 
+# :GOTCHA: GNU make rule for making .s out of .S is flawed,
 # it will not remove dest if building fails
 .S.s:
 	if $(CPP) $< >$@ ; then :; else rm -f $@; fi
@@ -205,5 +205,3 @@ include tests/tests.am
 include doc/doc.am
 # Putting these at the top causes cord to be built first, and not find libgc.a
 # on HP/UX.  There may be a better fix.
-
-
